# ohtu-2022-tehtavat

./: README.md
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
